<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SNRTools2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_settings">Setup</string>
    <string name="string_progressmsg1">Waiting for response&#8230;</string>
    <string name="string_progressmsg2">Downloading</string>
    <string name="string_progressmsg3">Connecting device</string>
    <string name="string_more">More</string>
    <string name="string_shouqi">Hide</string>
    <string name="string_search">Search</string>
    <string name="string_ok">OK</string>
    <string name="string_cancel">Cancel</string>
    <string name="string_bluetooth_search">Bluetooth Setting</string>
    <string name="string_stop">Stop</string>
    <string name="string_loading">Loading&#8230;</string>
    <string name="string_exit_app">Exit APP？</string>
    <string name="string_zlql">Clear TOTL</string>
    <string name="string_ypp">Paired</string>
    <string name="string_update">Exit APP！</string>
    <string name="string_update_label">Update Mode</string>
    <string name="string_menu_msg1">1. Support SE10E electromagnetism, SE10A electromagnetism, SV21E vortex street \n2. Add alarm information display \n3. Analog instrument display function</string>
    <string name="string_menu_msg2">Instrument assistant 2\nV%1$s\n more support access:\nwww.sinier.com.cn</string>
    <string name="string_menu1">New Features</string>
    <string name="string_menu2">About</string>
    <string name="string_menu3">Update App</string>
    <string name="string_menu4">Clear Cache</string>
    <string name="string_menu5">Exit</string>
    <string name="string_error_msg1">Server update version number error！</string>
    <string name="string_error_msg2">Download failed！</string>
    <string name="string_error_msg3">Connect timeout！</string>
    <string name="string_error_msg4">Read params failed,retry please！</string>
    <string name="string_error_msg5">Password error！</string>
    <string name="string_error_msg7">Write failed,Retry Please！</string>
    <string name="string_error_msg8">Read data timeout！</string>
    <string name="string_error_msg9">No device connected, connect again please！</string>
    <string name="string_error_msg10">Device disconnected, connect again please！</string>
    <string name="string_error_msg11">Write failed,Retry Please！</string>
    <string name="string_error_msg12">Device disconnected, connect again please！</string>
    <string name="string_error_msg13">Error device address ！</string>
    <string name="string_error_msg14">Device connected failed, retry please</string>
    <string name="string_error_msg15">Read data timeout！</string>
    <string name="string_tips_msg1">Latest version！</string>
    <string name="string_tips_msg2">Reading data&#8230;</string>
    <string name="string_tips_msg3">No device can be connected</string>
    <string name="string_tips_msg4">Select device</string>
    <string name="string_tips_msg5">Device Connect</string>
    <string name="string_tips_msg6">No visible device in the APP, retry in the system bluetooth setting and pair.\nAfter paired successful, return the APP and refresh bluetooth device list.</string>
    <string name="string_tips_msg7">No bluetooth device</string>
    <string name="string_tips_msg8">Please enter a value！</string>
    <string name="string_tips_msg9">Value must not be larger than</string>
    <string name="string_tips_msg10">Value must not be small than</string>
    <string name="string_tips_msg11">Communicating with device&#8230;</string>
    <string name="string_tips_msg12">Please enter the password！</string>
    <string name="string_tips_msg13">Clear TOTL success！</string>
    <string name="string_tips_msg14">No bluetooth device detected, restart bluetooth and retry please!</string>
    <string name="string_tips_msg15">Start sending command！</string>
    <string name="string_tips_msg16">Connected success！</string>
    <string name="string_alarm_llsx">Flow High</string>
    <string name="string_alarm_llxx">Flow Low</string>
    <string name="string_alarm_lcyc">Exct Error</string>
    <string name="string_alarm_kgbj">Alm-Emp Pipe</string>
    <string name="string_main_label_ssll">Volume Flow:</string>
    <string name="string_main_label_ljll">Sum Tolizer:</string>
    <string name="string_main_label_ssls">Flow Speed:</string>
    <string name="string_main_label_llbfb">Flow Percentage:</string>
    <string name="string_main_label_kgb">Empty Pipe Percentage:</string>
    <string name="string_main_label_zxlj">Forward Flow Totalizer:</string>
    <string name="string_main_label_fxlj">Reverse Flow Totalizer:</string>
    <string name="string_title1">Setup</string>
    <string name="string_title2">Setup</string>
    <string name="string_title3">Password</string>
    <string name="string_tab1">Monitor</string>
    <string name="string_tab2">Setup</string>
    <string name="string_hint1">Range</string>
    <string name="string_hint2">Please enter the password</string>
    <string name="string_param_type1">Basic Setup</string>
    <string name="string_param_type2">Advanced Setup</string>
    <string name="string_param_type3">Sensor Setup</string>
    <string name="string_param_type4">Converter Setup</string>
    <string name="string_param_label1">Language</string>
    <string name="string_param_label2">Flow Unit</string>
    <string name="string_param_label3">Flow Span</string>
    <string name="string_param_label4">Flow Direction</string>
    <string name="string_param_label5">Invert Output</string>
    <string name="string_param_label6">Total Unit</string>
    <string name="string_param_label7">Flow Damping</string>
    <string name="string_param_label8">Low Flow Cutoff</string>
    <string name="string_param_label9">Pulse Output Mode</string>
    <string name="string_param_label10">Value Per Pulse</string>
    <string name="string_param_label11">Pulse Width</string>
    <string name="string_param_label12">Max. Pulse Rate</string>
    <string name="string_param_label13">Flow Rate Zero</string>
    <string name="string_param_label14">Backlight Time</string>
    <string name="string_param_label15">MBS Address</string>
    <string name="string_param_label16">MBS Baudrate</string>
    <string name="string_param_label17">Device TAG</string>
    <string name="string_param_label18">Line Size</string>
    <string name="string_param_label19">Cutoff Visiable</string>
    <string name="string_param_label20">Sensor Gain</string>
    <string name="string_param_label21">Alm-Emp Pipe</string>
    <string name="string_param_label22">Limit Empty Pipe</string>
    <string name="string_param_label23">Alm-Flow High</string>
    <string name="string_param_label24">Limit High Alarm</string>
    <string name="string_param_label25">Alm-Flow Low</string>
    <string name="string_param_label26">Limit Low Alarm</string>
    <string name="string_param_label27">Alm-Exct</string>
    <string name="string_param_label28">Forward Total</string>
    <string name="string_param_label29">Reverse Total</string>
    <string name="string_param_label30">Base Password</string>
    <string name="string_param_label31">Advance Password</string>
    <string name="string_param_label32">Clear TOTL Password</string>
    <string name="string_param_label33">Flow Rate Compa</string>
    <string name="string_param_label34">Flow Comp Num1</string>
    <string name="string_param_label35">Flow Comp Num2</string>
    <string name="string_param_label36">Flow Comp Val2</string>
    <string name="string_param_label37">Flow Comp Num3</string>
    <string name="string_param_label38">Flow Comp Val3</string>
    <string name="string_param_label39">Flow Comp Num4</string>
    <string name="string_param_label40">Flow Comp Val4</string>
    <string name="string_param_label41">Flow Comp Num5</string>
    <string name="string_param_label42">Flow Comp Val5</string>
    <string name="string_param_label43">Flow Comp Num6</string>
    <string name="string_param_label44">Flow Comp Val6</string>
    <string name="string_param_label45">Flow Comp Num7</string>
    <string name="string_param_label46">Flow Comp Val7</string>
    <string name="string_param_label47">Flow Comp Num8</string>
    <string name="string_param_label48">Flow Comp Val8</string>
    <string name="string_param_label49">Excitation Mode</string>
    <string name="string_param_label50">Excitation Current</string>
    <string name="string_param_label51">Peak Restrain</string>
    <string name="string_param_label52">Peak Restrain Factor</string>
    <string name="string_param_label53">PeakRestrain Time</string>
    <string name="string_param_label54">Sensor No</string>
    <string name="string_param_label55">Sensor Password</string>
    <string name="string_param_label56">Converter Slope</string>
    <string name="string_param_label57">Converter Offset</string>
    <string name="string_param_label58">Empty Pipe Zero Trimming</string>
    <string name="string_param_label59">0mA Trimming</string>
    <string name="string_param_label60">20mA Trimming</string>
    <string name="string_param_label61">Instrument Serial Num</string>
    <string name="string_param_label62">Converter Password</string>
    <string name="string_param_label62_1">Sim Output</string>
    <string name="string_param1">Forward</string>
    <string name="string_param2">Reverse</string>
    <string name="string_param3">Enable</string>
    <string name="string_param4">Disable</string>
    <string name="string_param5">Pulse</string>
    <string name="string_param6">Freq</string>
    <string name="string_param7">Always ON</string>
    <string name="string_param8">Hz</string>
    <string name="string_param9">Measure Ouput</string>
    <string name="get_setting_error">Fetch configuration failure</string>
    <string name="sync_config">Synchronize the update configuration</string>
    <string name="sync_string">Synchronize the update string</string>
    <string name="sync_var">Synchronize the update variable</string>
    <string name="sync_mainview">Synchronize the update main view</string>
    <string name="sync_params">Synchronize the update parameters</string>
    <string name="sync_cmd">Synchronize the update command</string>
    <string name="ip_error">Please enter the correct IP address</string>
    <string name="label_cmd">Operation command</string>
    <string name="cmd_success">The operation command executes successfully.</string>
    <string name="warn_info">Alarm</string>
    <string name="pd_info">Product Information</string>
    <string name="pd_model">Model:</string>
    <string name="pd_version">Version:</string>
    <string name="pd_build_time">Build Time:</string>
    <string name="pd_sn">SN:</string>
    <string name="log">Log</string>
    <string name="no_log">Log is empty!</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="second">Second</string>
    <string name="str_now">Current Time</string>
    <string name="loc_permission">Enable the locating permission; otherwise, the device cannot be scanned and obtained</string>
    <string name="chaobiao">Meter Reading</string>
    <string name="shujubao">Packet</string>
    <string name="ssll">Volume Flow</string>
    <string name="ljll">Sum Tolizer</string>
    <string name="code">Code</string>

</resources>