<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/titlebar"
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="#ededed"
        android:layout_height="35dp">
        <TextView
            android:id="@+id/tvBianHao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/code"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tvShunShiLiuLiang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ssll"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tvLeiJiLiuLiang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/ljll"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />
        <View
            android:layout_width="0.5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#cccccc"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tvShuJuBao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/shujubao"
            android:textColor="#1a1a1a"
            android:textSize="15sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="#d9d9d9"
        android:dividerHeight="0.5dp" />


</LinearLayout>