<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eee"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#178DF2">

                <com.bluetooth.modbus.snrtools2.view.MainView
                    android:id="@+id/mainview"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/llMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnWarn"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_0d9bf9_bg"
                    android:text="@string/warn_info"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btnMore"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_0d9bf9_bg"
                    android:text="@string/string_more"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPdInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/pd_info"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="#178DF2" />

                <TextView
                    android:id="@+id/tvModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="#333333"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.bluetooth.modbus.snrtools2.view.NoFocuseTextview
        android:id="@+id/tvAlarm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffff4444"
        android:ellipsize="marquee"
        android:focusable="true"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

</LinearLayout>